# Testing_Iot

./: README.md
TestIot/: CMakeLists.txt
TestIot/include/: DataCollector.h  DataProcessor.h  IMQTTClient.h  ISensor.h  IStorage.h  MQTTPublisher.h
TestIot/src/: DataCollector.cpp  DataProcessor.cpp  MQTTPublisher.cpp
TestIot/tests/: DataCollectorTest.cpp  DataProcessorTest.cpp  IntegrationTest.cpp  IntegrationTest.h  MQTTPublisherTest.cpp  MockMQTTClient.h  MockSensor.h  MockStorage.h
